cartopy/docs/v0.19/_sources/gallery/miscellanea/utm_all_zones.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/miscellanea/utm_all_zones.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_gallery_miscellanea_utm_all_zones.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_miscellanea_utm_all_zones.py:


Displaying all 60 zones of the UTM projection
---------------------------------------------

This example displays all 60 zones of the Universal Transverse Mercator
projection next to each other in a figure.

First we create a figure with 60 subplots in one row.
Next we set the projection of each axis in the figure to a specific UTM zone.
Then we add coastlines, gridlines and the number of the zone.
Finally we add a supertitle and display the figure.

.. GENERATED FROM PYTHON SOURCE LINES 13-46



.. image:: /gallery/miscellanea/images/sphx_glr_utm_all_zones_001.png
    :alt: UTM Projection - Zones, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60
    :class: sphx-glr-single-img





.. code-block:: default

    import cartopy.crs as ccrs
    import matplotlib.pyplot as plt


    def main():
        # Create a list of integers from 1 - 60
        zones = range(1, 61)

        # Create a figure
        fig = plt.figure(figsize=(18, 6))

        # Loop through each zone in the list
        for zone in zones:

            # Add GeoAxes object with specific UTM zone projection to the figure
            ax = fig.add_subplot(1, len(zones), zone,
                                 projection=ccrs.UTM(zone=zone,
                                                     southern_hemisphere=True))

            # Add coastlines, gridlines and zone number for the subplot
            ax.coastlines(resolution='110m')
            ax.gridlines()
            ax.set_title(zone)

        # Add a supertitle for the figure
        fig.suptitle("UTM Projection - Zones")

        # Display the figure
        plt.show()


    if __name__ == '__main__':
        main()


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  6.771 seconds)


.. _sphx_glr_download_gallery_miscellanea_utm_all_zones.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: utm_all_zones.py <utm_all_zones.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: utm_all_zones.ipynb <utm_all_zones.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
